Change word list

--- a/word_generation/templates/word_generation/how-to.html
+++ b/word_generation/templates/word_generation/how-to.html
@@ -49,7 +49,7 @@
     <div class="basics">
       <ul>
         <li>Type 100 words as fast and accurate as you can</li>
-        <li>These words are randomly generated using a filtered list of words from <a style="color:darkblue;" href="https://www.mit.edu/~ecprice/wordlist.10000">here</a></li>
+        <li>The words are randomly picked from a list of words</li>
         <li>Create an account to save and view your scores and stats - max wpm, max accuracy, min time and a graph displaying information about the last 5 tests</li>
         <li>Accuracy is based on how many letters are correct</li>
         <li>WPM is evaluated based on accuracy and time taken to type those 100 words</li>
